<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BioAdresar.
	Copyright 2012 Jiri Zouhar (zouhar@trilobajt.cz)

    BioAdresar is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BioAdresar is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Adresář farmářů</string>
    <string name="name">Jméno</string>
    <string name="select_products">Vyber produkci</string>
    <string name="select_activities">Vyber aktivity</string>
    <string name="city">Město</string>
    <string name="farm_name">Název</string>
    <string name="add_farm">Přidat farmu</string>
    <string name="edit_farm">Upravit farmu</string>
    <string name="here_fill_farm_name">zde napište celý název farmy</string>
    <string name="coordinates">Souřadnice GPS</string>
    <string name="lat">délka</string>
    <string name="lon">šířka</string>
    <string name="street_with_number">Ulice a čp</string>
    <string name="zip">PSČ</string>
    <string name="description">Popis</string>
    <string name="contact">Kontakt</string>
    <string name="main_tab_title">Menu</string>
    <string name="map_tab_title">Mapa</string>
    <string name="list_tab_title">Seznam</string>
    <string name="filter_tab_title">Filtr</string>
    <string name="Produkce">Produkce</string>
    <string name="web">Web</string>
    <string name="other_he_form">jiný</string>
    <string name="other_she_form">jiná</string>
    <string name="email">E-Mail</string>
    <string name="production">Produkce</string>
    <string name="product">Produkt</string>
    <string name="activity">Aktivita</string>
    <string name="search_hint">Hledej produkt, farmu…</string>
    <string name="description">Popis</string>
    <string name="phone">Telefon</string>
    <string name="address">Adresa</string>
    <string name="eshop">E-shop</string>
    <string name="about_label">O Aplikaci</string>
    <string name="install_google_play">Tato funkce vyžaduje nainstalované Google Play Services</string>
    <string name="update_start">Aktualizuji databázi</string>
    <string name="data_up_to_date">Data aktuální</string>
    <string name="update_finished">Databáze aktualizována</string>
    <string name="data_reload">Restartuji s aktuálními daty</string>
    <string name="config_label">Nastavení</string>
    <string name="config_summary">Chování aplikace po startu</string>
    <string name="homepage">http://trilobajt.cz/adresar</string>
    <string name="contactMail">adresar@trilobajt.cz</string>
    <string name="aboutText">Najděte si přímo v terénu nejbližšího farmáře a vychutnejte si čerstvé ovoce či zeleninu z vašeho okolí.<br />Adresář farmářů, kteří prodávají přímo ze dvora nebo dodávají bio bedýnky obsahuje přes pět set kontaktů na ekologické farmáře. Ke každému hospodářství adresář uvádí podrobný sortiment, kontakt a informace, co a kam dodávají.</string>
    <string name="attribution">Aplikaci pro Hnutí DUHA (http://hnutiduha.cz) vytvořili Jiří Prokop, Jiří Zouhar a Tomáš Hanáček v rámci celosvětové akce Random Hacks of Kindness.</string>
    <string name="licence">Tento program je svobodný software: lze ho distribuovat či modifikovat pod podmínkami GNU General Public Licence verze 3 (https://www.gnu.org/licenses/gpl.txt).</string>
    <string name="dataLicence">Nakládání s obsahem aplikace, která je chráněna autorským právevm se řídí zákonem č. 121/2000 Sb., autorský zákon v účinném znění. Převzetí obsahu je možné pouze se souhlasem vydavatele dle §34 (1)c).</string>
    <string name="licenceLabel">Licence</string>
    <string name="dataLicenceLabel">Licence k datům</string>
    <string name="betaNotice">Aplikace je v ranných stádiích vývoje. Prosím omluvte případné chyby. Připomínky a návrhy na zlepšení uvítáme na adrese adresar@trilobajt.cz</string>
    <string name="defaultActivityLabel">Po spuštění přejít na</string>
    <string name="defaultLocationLabel">Výchozí poloha</string>
    <string name="defaultLocationSummary">V případě nedostupnosti polohy zvolí jako střed</string>
    <string name="renewLocationLabel">Načíst pozici</string>
    <string name="realLocation">reálná</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="virtualLocation">zadaná</string>
    <string name="next25">Dalších 25</string>
    <string name="activities">Aktivity</string>
    <string name="requireGps">Vyžadovat gps</string>
    <string name="enableGps">Zapnout gps?</string>
    <string name="enableNetwork">Je potřeba připojení k internetu</string>
    <string name="bookmarkListLabel">Záložky</string>
    <string name="map_activity_name">MAPA</string>
    <string name="list_activity_name">SEZNAM</string>
    <string name="bookmarks_activity_name">OBLÍBENÉ</string>
    <string name="app_name_uppercase">ADRESÁŘ FARMÁŘŮ</string>
    <string name="customDistribution">Rozvoz domů</string>
    <string name="containerDistributionTime">Výdejní čas</string>
    <string name="containers">Bedýnky</string>
    <string name="containerDistributionPlaces">Výdejní místa</string>
    <string name="commentHint">poznámky, co se jinam nevešlo&#8230;</string>
    <string name="contactPerson">Kontaktní osoba</string>
    <string name="editorContact">Kontakt na Vás</string>
    <string name="placeAndTime">Místo a čas</string>
    <string name="emailNonValid">E-mail není validní</string>
    <string name="eshopNonValid">E-shop není validní URL</string>
    <string name="webNonValid">Web není validní URL</string>
    <string name="invalidCoordinates">Gps souřadnice nejsou validní</string>
    <string name="invalidForm">Chyba v formuláři</string>
    <string name="fillInName">"Je třeba vyplnit jméno"</string>
    <string name="fillAtLeastOneContact">Vyplňte alespoň jeden kontakt</string>
    <string name="networkError">Chyba ve spojení</string>
    <string name="invalidResponse">Chybná odpověď ze serveru</string>
    <string name="farmOverview">náhled</string>
    <string name="farmPosition">pozice</string>
    <string name="farmContact">kontakt</string>
    <string name="farmDetails">detail</string>
    <string name="farmSend">odeslat</string>
    <string name="somethingIsWrong">Něco se změnilo?</string>
    <string name="ughDeadEnd">Ugh, nečekaná chyba, zkuste to znovu</string>
    <string name="positionByClick">GPS koordináty lze zadat i dlouhým stiskem v mapě</string>

</resources>