<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bioadresar="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="0.9" >

            <LinearLayout
                android:id="@+id/uberLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/comments"
                    style="@style/HnutiDuha.InputMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/commentHint"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:minLines="6"
                    android:nextFocusDown="@+id/name"
                    android:nextFocusForward="@+id/name"
                    android:nextFocusRight="@+id/name" />

                <LinearLayout
                    android:id="@+id/senderContactLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/HnutiDuha.HeaderMediumWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editorContact" />

                    <EditText
                        android:id="@+id/name"
                        style="@style/HnutiDuha.InputMedium"
                        android:layout_width="match_parent"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/mail"
                        android:nextFocusForward="@+id/mail"
                        android:nextFocusLeft="@+id/comments"
                        android:nextFocusRight="@+id/mail"
                        android:nextFocusUp="@+id/comments" />

                    <EditText
                        android:id="@+id/mail"
                        style="@style/HnutiDuha.InputMedium"
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/sendButton"
                        android:nextFocusForward="@+id/sendButton"
                        android:nextFocusLeft="@+id/name"
                        android:nextFocusRight="@+id/sendButton"
                        android:nextFocusUp="@+id/name" />
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/navigationButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="bottom"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/list_spacer" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/back_button" />

                <ImageView
                    android:id="@+id/sendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/send_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>